	  (DLR)
- files.c:
  do_insertfile()
	- Make sure the mark is always properly positioned after
	  inserting a file with the mark on. (DLR)
  copy_file()
	- Assert that inn and out don't both point to the same file.
	  (DLR)
  username_tab_completion(), cwd_tab_completion(), input_tab()
	- Update copyright notice to account for modifications. (DLR)
  cwd_tab_completion()
	- Remove unneeded assert. (DLR)
- nano.c:
  version()
	- Display copyright notices. (DLR)
  copy_from_file()
	- Fix potential segfault after uncutting one line of text with
	  the mark on by properly preserving the beginning of the mark.
	  (DLR, found by Paul Goins)
	- Make sure the mark is always properly positioned after
	  uncutting text with the mark on. (DLR)
- prompt.c:
  do_yesno_prompt()
	- Remove redundant check for NO_HELP's being FALSE. (DLR)
- search.c:
  do_replace_loop()
	- Fix problem where replacing e.g. single-byte characters with
	  multibyte ones could result in openfile->totsize's being
	  miscalculated. (DLR)
- utils.c:
  ngetline(), ngetdelim()
	- Update copyright notice to account for modifications. (DLR)
  ngetdelim()
	- Simplify. (DLR)
- winio.c:
  get_key_buffer()
	- Fix inaccurate comments. (DLR)
  do_mouseinput()
	- Add mouse wheel support.  Now, if mouse support is enabled,
	  and nano is using a version of ncurses compiled with the
	  --enable-ext-mouse option, rolling the mouse wheel up or down
	  will move the cursor three lines up or down.  Note that
	  ncurses built without --enable-ext-mouse needs to handle both
	  clicks and releases of the first mouse button, but ncurses
	  built with --enable-ext-mouse only needs to handle releases,
	  so keep dealing with both events. (DLR, suggested by Helmut
	  Jarausch)
  edit_scroll()
	- Fix problem where the screen wouldn't be updated properly if
	  you paged up with the first line of the file onscreen and the
	  mark on. (DLR)
- configure.ac:
	- Update copyright notice to account for modifications. (DLR)
- COPYING: